Edited DataProvider.